--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <span class="rec" aria-hidden="true">rec<span class="dot"></span>
-      </span>
-      
+      <span class="rec" aria-hidden="true">rec</span>
+
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -55,44 +54,147 @@
         <p class="description__text-start">
           Что делать, когда не можешь делать ничего
         </p>
-        <p class="description__text-end">Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+        <p class="description__text-end">
+          Или почему нам так сложно сконцентрироваться, особенно когда очень
+          надо
+        </p>
       </div>
     </header>
     <main>
-      <section class="section">
-        <h2 class="section__title">Почему сосредоточиться так сложно</h2>
-        <h3 class="section__subtitle">Многозадачность</h3>
-        <p class="section__text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи выяснили, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
-        <h3 class="section__subtitle">Дофамин</h3>
-        <p class="section__text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
+      <section class="section section__grid">
+        <h2 class="section__title section__grid-left">Почему сосредоточиться так сложно</h2>
+        <h3 class="section__subtitle section__grid-right">Многозадачность</h3>
+        <p class="section__text section__grid-right">
+          Особенно сложно сосредоточиться, когда задач много и все они — важные.
+          Где же легендарная многозадачность, когда она так нужна вам (и всем
+          нанимающим менеджерам этого мира)? А дело в том, что её просто не
+          существует. Исследователи <a class="link" href="https://dana.org/news-and-insights/">выяснили</a>, что мозгу тяжело концентрироваться
+          даже на двух делах одновременно. А когда в поле внимания попадает
+          несколько важных задач, организм паникует и выделяет кортизол и
+          адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно:
+          ошибаемся и быстро устаём.
+        </p>
+        <h3 class="section__subtitle section__subtitle_shift-top section__grid-right">Дофамин</h3>
+        <p class="section__text section__grid-right">
+          С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
+          невозможности сосредоточиться замешана и полная противоположность
+          стрессу — дофамин. Это вещество участвует в системе вознаграждения
+          мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то
+          более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это
+          время и выделяется дофамин — и мы чувствуем удовольствие. Получается
+          замкнутый круг: чем больше отвлекаешься, тем больше удовольствия
+          получаешь.
+        </p>
       </section>
       <section class="section">
         <h2 class="section__title">Что снижает концентрацию внимания?</h2>
         <h3 class="section__subtitle">Многозадачность</h3>
-        <p class="section__text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
-        <h3 class="section__subtitle">Еда</h3>
-        <p class="section__text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
-        <h3 class="section__subtitle">Гаджеты</h3>
-        <p class="section__text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
+        <p class="section__text">
+          Как концентрация может снижаться из-за… концентрации? Любая стрессовая
+          ситуация (и резко меняющийся мир в целом) заставляет наш мозг
+          постоянно «сканировать» окружающую среду на предмет опасности.
+          Например, читать новости вместо работы. Но быть собранными всё время —
+          невозможно. Концентрация — мышца, и она может не выдержать, если не
+          давать ей отдохнуть.
+        </p>
+        <h3 class="section__subtitle section__subtitle_shift-top">Еда</h3>
+        <p class="section__text">
+          «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+          доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта
+          энергия также быстро, как и приходит. А мы в результате попадаем на
+          «углеводные качели»: как только действие «быстрых углеводов»
+          заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше
+          быстрых углеводов.
+        </p>
+        <h3 class="section__subtitle section__subtitle_shift-top ">Гаджеты</h3>
+        <p class="section__text">
+          Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+          наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
+          утятами. В результате мозг пытается переключиться с одной задачи на
+          другую — и просто не может. А чтобы вернуться к состоянию полной
+          концентрации, человеку в среднем нужно 20 минут. Вот и получается, что
+          чем больше времени мы проводим в гаджетах, тем больше времени затем
+          нужно, чтобы вернуться к работе.
+        </p>
       </section>
-      <section class="section">
-        <h2 class="section__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-        <h3 class="section__subtitle">5 простых (на самом деле не очень) советов</h3>
-        <h4 class="section__title-advice">Представьте небо и облака</h4>
-        <p class="section__text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
-        <h4 class="section__title-advice">Включите музыку</h4>
-        <p class="section__text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист с «белым шумом» или нейромузыкой.</p>
-        <h4 class="section__title-advice">Прогуляйтесь</h4>
-        <p class="section__text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент показал, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
-        <h4 class="section__title-advice">Хорошо ешьте</h4>
-        <p class="section__text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
-        <h4 class="section__title-advice">Читайте</h4>
-        <p class="section__text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
+      <section class="section section__grid">
+        <h2 class="section__title section__grid-left">
+          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+          секунд)
+        </h2>
+        <h3 class="section__subtitle section__grid-right">
+          5 простых (на самом деле не очень) советов
+        </h3>
+        <h4 class="section__title-advice section__subtitle-advice-shift section__grid-right">Представьте небо и облака</h4>
+        <p class="section__text section__grid-right">
+          Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+          успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
+          раз и мешают эти сложные задачи делать. В такие моменты можно закрыть
+          глаза и представить, что чистое небо — это вы, а облака — тревожные
+          мысли. И сколько бы их ни было — ясное небо всегда будет где-то там,
+          за тучами, и никуда не денется. Это упражнение поможет вернуться в
+          настоящий момент, а не волноваться о потенциальных проблемах из
+          будущего.
+        </p>
+        <h4 class="section__title-advice section__subtitle_shift-top section__grid-right">Включите музыку</h4>
+        <p class="section__text section__grid-right">
+          Но не любую, и не любимую. Любимая может быть связана с сильными
+          положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт
+          тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать
+          включить плейлист с «белым шумом» или нейромузыкой.
+        </p>
+        <h4 class="section__title-advice section__subtitle_shift-top section__grid-right">Прогуляйтесь</h4>
+        <p class="section__text section__grid-right">
+          Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+          показал, что созерцание природы повышает концентрацию, в то время как
+          после просмотра городских пейзажей она наоборот понижается. Можно
+          совместить прогулку с физическими упражнениями или бегом — так в мозг
+          поступит ещё больше кислорода и он будет лучше работать. Но и простая
+          двадцатиминутная прогулка — тоже отличный вариант.
+        </p>
+        <h4 class="section__title-advice section__subtitle_shift-top section__grid-right">Хорошо ешьте</h4>
+        <p class="section__text section__grid-right">
+          Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые
+          препятствуют резким скачкам сахара в крови. Например, с высоким
+          содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль),
+          коричневый рис, хлеб из цельнозерновой пшеницы.
+        </p>
+        <h4 class="section__title-advice section__subtitle_shift-top section__grid-right">Читайте</h4>
+        <p class="section__text section__grid-right">
+          Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
+          прочитать пост в соцсети, достаточно нескольких минут или даже секунд.
+          А вот интересная книга способна затянуть и на несколько часов и круто
+          тренирует направленное внимание.
+        </p>
       </section>
-      <section>
-        <h3 class="section__subtitle"></h3>
+      <section class="gallery">
+        <h3 class="section__subtitle section__subtitle_gallery">А можно в картинках?</h3>
+        <div class="gallery__positioning">
+        <picture class="gallery__item-1">
+          <source src="../images/sunset.png" type="image/png">
+          <img class="gallery__image"  src="./images/sunset.png" loading="lazy" alt="Закат солнца на фоне гор и воды">
+        </picture>
+        <picture class="gallery__item-2">
+          <source src="../images/ice-cream.png" type="image/png">
+          <img class="gallery__image" src="./images/ice-cream.png" loading="lazy" alt="Мороженое ввиде придуманных персонажей">
+        </picture>
+        <picture class="gallery__item-3">
+          <source src="../images/tape.png" type="image/png">
+          <img class="gallery__image" src="./images/tape.png" loading="lazy" alt="Кассета как отголосок прошлого">
+        </picture>
+        <picture class="gallery__item-4">
+          <source src="../images/books.png" type="image/png">
+          <img class="gallery__image" src="./images/books.png" loading="lazy" alt="Стопка обучающих книг">
+        </picture>
+        <picture class="gallery__item-5">
+          <source src="../images/street.png" type="image/png">
+          <img class="gallery__image" src="./images/street.png" loading="lazy" alt="Улица в малоэтажном районе">
+        </picture>
+        </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="footer decorated-zone">
+      <span class="footer_title">focus</span>
+    </footer>
   </body>
 </html>
