--- a/index.html
+++ b/index.html
@@ -62,19 +62,26 @@
     </header>
     <main>
       <section class="section section__grid">
-        <h2 class="section__title section__grid-left">Почему сосредоточиться так сложно</h2>
+        <h2 class="section__title section__grid-left">
+          Почему сосредоточиться так сложно
+        </h2>
         <h3 class="section__subtitle section__grid-right">Многозадачность</h3>
         <p class="section__text section__grid-right">
           Особенно сложно сосредоточиться, когда задач много и все они — важные.
           Где же легендарная многозадачность, когда она так нужна вам (и всем
           нанимающим менеджерам этого мира)? А дело в том, что её просто не
-          существует. Исследователи <a class="link" href="https://dana.org/news-and-insights/">выяснили</a>, что мозгу тяжело концентрироваться
-          даже на двух делах одновременно. А когда в поле внимания попадает
-          несколько важных задач, организм паникует и выделяет кортизол и
-          адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно:
-          ошибаемся и быстро устаём.
+          существует. Исследователи
+          <a class="link" href="https://dana.org/news-and-insights/">выяснили</a
+          >, что мозгу тяжело концентрироваться даже на двух делах одновременно.
+          А когда в поле внимания попадает несколько важных задач, организм
+          паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за
+          этого мы работаем невнимательно: ошибаемся и быстро устаём.
         </p>
-        <h3 class="section__subtitle section__subtitle_shift-top section__grid-right">Дофамин</h3>
+        <h3
+          class="section__subtitle section__subtitle_shift-top section__grid-right"
+        >
+          Дофамин
+        </h3>
         <p class="section__text section__grid-right">
           С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
           невозможности сосредоточиться замешана и полная противоположность
@@ -106,7 +113,7 @@
           заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше
           быстрых углеводов.
         </p>
-        <h3 class="section__subtitle section__subtitle_shift-top ">Гаджеты</h3>
+        <h3 class="section__subtitle section__subtitle_shift-top">Гаджеты</h3>
         <p class="section__text">
           Да-да, это та самая ситуация, когда на экране ноутбука — код, в
           наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
@@ -125,7 +132,11 @@
         <h3 class="section__subtitle section__grid-right">
           5 простых (на самом деле не очень) советов
         </h3>
-        <h4 class="section__title-advice section__subtitle-advice-shift section__grid-right">Представьте небо и облака</h4>
+        <h4
+          class="section__title-advice section__subtitle-advice-shift section__grid-right"
+        >
+          Представьте небо и облака
+        </h4>
         <p class="section__text section__grid-right">
           Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
           успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
@@ -136,14 +147,22 @@
           настоящий момент, а не волноваться о потенциальных проблемах из
           будущего.
         </p>
-        <h4 class="section__title-advice section__subtitle_shift-top section__grid-right">Включите музыку</h4>
+        <h4
+          class="section__title-advice section__subtitle_shift-top section__grid-right"
+        >
+          Включите музыку
+        </h4>
         <p class="section__text section__grid-right">
           Но не любую, и не любимую. Любимая может быть связана с сильными
           положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт
           тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать
           включить плейлист с «белым шумом» или нейромузыкой.
         </p>
-        <h4 class="section__title-advice section__subtitle_shift-top section__grid-right">Прогуляйтесь</h4>
+        <h4
+          class="section__title-advice section__subtitle_shift-top section__grid-right"
+        >
+          Прогуляйтесь
+        </h4>
         <p class="section__text section__grid-right">
           Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
           показал, что созерцание природы повышает концентрацию, в то время как
@@ -152,14 +171,22 @@
           поступит ещё больше кислорода и он будет лучше работать. Но и простая
           двадцатиминутная прогулка — тоже отличный вариант.
         </p>
-        <h4 class="section__title-advice section__subtitle_shift-top section__grid-right">Хорошо ешьте</h4>
+        <h4
+          class="section__title-advice section__subtitle_shift-top section__grid-right"
+        >
+          Хорошо ешьте
+        </h4>
         <p class="section__text section__grid-right">
           Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые
           препятствуют резким скачкам сахара в крови. Например, с высоким
           содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль),
           коричневый рис, хлеб из цельнозерновой пшеницы.
         </p>
-        <h4 class="section__title-advice section__subtitle_shift-top section__grid-right">Читайте</h4>
+        <h4
+          class="section__title-advice section__subtitle_shift-top section__grid-right"
+        >
+          Читайте
+        </h4>
         <p class="section__text section__grid-right">
           Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
           прочитать пост в соцсети, достаточно нескольких минут или даже секунд.
@@ -168,28 +195,55 @@
         </p>
       </section>
       <section class="gallery">
-        <h3 class="section__subtitle section__subtitle_gallery">А можно в картинках?</h3>
+        <h3 class="section__subtitle section__subtitle_gallery">
+          А можно в картинках?
+        </h3>
         <div class="gallery__positioning">
-        <picture class="gallery__item-1">
-          <source src="../images/sunset.png" type="image/png">
-          <img class="gallery__image"  src="./images/sunset.png" loading="lazy" alt="Закат солнца на фоне гор и воды">
-        </picture>
-        <picture class="gallery__item-2">
-          <source src="../images/ice-cream.png" type="image/png">
-          <img class="gallery__image" src="./images/ice-cream.png" loading="lazy" alt="Мороженое ввиде придуманных персонажей">
-        </picture>
-        <picture class="gallery__item-3">
-          <source src="../images/tape.png" type="image/png">
-          <img class="gallery__image" src="./images/tape.png" loading="lazy" alt="Кассета как отголосок прошлого">
-        </picture>
-        <picture class="gallery__item-4">
-          <source src="../images/books.png" type="image/png">
-          <img class="gallery__image" src="./images/books.png" loading="lazy" alt="Стопка обучающих книг">
-        </picture>
-        <picture class="gallery__item-5">
-          <source src="../images/street.png" type="image/png">
-          <img class="gallery__image" src="./images/street.png" loading="lazy" alt="Улица в малоэтажном районе">
-        </picture>
+          <picture class="gallery__item-1">
+            <source src="../images/sunset.png" type="image/png" />
+            <img
+              class="gallery__image"
+              src="./images/sunset.png"
+              loading="lazy"
+              alt="Закат солнца на фоне гор и воды"
+            />
+          </picture>
+          <picture class="gallery__item-2">
+            <source src="../images/ice-cream.png" type="image/png" />
+            <img
+              class="gallery__image"
+              src="./images/ice-cream.png"
+              loading="lazy"
+              alt="Мороженое ввиде придуманных персонажей"
+            />
+          </picture>
+          <picture class="gallery__item-3">
+            <source src="../images/tape.png" type="image/png" />
+            <img
+              class="gallery__image"
+              src="./images/tape.png"
+              loading="lazy"
+              alt="Кассета как отголосок прошлого"
+            />
+          </picture>
+          <picture class="gallery__item-4">
+            <source src="../images/books.png" type="image/png" />
+            <img
+              class="gallery__image"
+              src="./images/books.png"
+              loading="lazy"
+              alt="Стопка обучающих книг"
+            />
+          </picture>
+          <picture class="gallery__item-5">
+            <source src="../images/street.png" type="image/png" />
+            <img
+              class="gallery__image"
+              src="./images/street.png"
+              loading="lazy"
+              alt="Улица в малоэтажном районе"
+            />
+          </picture>
         </div>
       </section>
     </main>
