--- a/index.html
+++ b/index.html
@@ -95,34 +95,44 @@
       </section>
       <section class="section">
         <h2 class="section__title">Что снижает концентрацию внимания?</h2>
-        <h3 class="section__subtitle">Многозадачность</h3>
-        <p class="section__text">
-          Как концентрация может снижаться из-за… концентрации? Любая стрессовая
-          ситуация (и резко меняющийся мир в целом) заставляет наш мозг
-          постоянно «сканировать» окружающую среду на предмет опасности.
-          Например, читать новости вместо работы. Но быть собранными всё время —
-          невозможно. Концентрация — мышца, и она может не выдержать, если не
-          давать ей отдохнуть.
-        </p>
-        <h3 class="section__subtitle section__subtitle_shift-top">Еда</h3>
-        <p class="section__text">
-          «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
-          доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта
-          энергия также быстро, как и приходит. А мы в результате попадаем на
-          «углеводные качели»: как только действие «быстрых углеводов»
-          заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше
-          быстрых углеводов.
-        </p>
-        <h3 class="section__subtitle section__subtitle_shift-top">Гаджеты</h3>
-        <p class="section__text">
-          Да-да, это та самая ситуация, когда на экране ноутбука — код, в
-          наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
-          утятами. В результате мозг пытается переключиться с одной задачи на
-          другую — и просто не может. А чтобы вернуться к состоянию полной
-          концентрации, человеку в среднем нужно 20 минут. Вот и получается, что
-          чем больше времени мы проводим в гаджетах, тем больше времени затем
-          нужно, чтобы вернуться к работе.
-        </p>
+        <div class="section__content">
+          <div class="section__pair">
+            <h3 class="section__subtitle">Многозадачность</h3>
+            <p class="section__text">
+              Как концентрация может снижаться из-за… концентрации? Любая
+              стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+              наш мозг постоянно «сканировать» окружающую среду на предмет
+              опасности. Например, читать новости вместо работы. Но быть
+              собранными всё время — невозможно. Концентрация — мышца, и она
+              может не выдержать, если не давать ей отдохнуть.
+            </p>
+          </div>
+          <div class="section__pair">
+            <h3 class="section__subtitle section__subtitle_shift-top">Еда</h3>
+            <p class="section__text">
+              «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+              доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+              эта энергия также быстро, как и приходит. А мы в результате
+              попадаем на «углеводные качели»: как только действие «быстрых
+              углеводов» заканчивается, мы чувствуем усталость и сонливость. И
+              хотим ещё больше быстрых углеводов.
+            </p>
+          </div>
+          <div class="section__pair">
+            <h3 class="section__subtitle section__subtitle_shift-top">
+              Гаджеты
+            </h3>
+            <p class="section__text">
+              Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+              наушниках — подкаст, а на компьютере фоном — ещё и видео с
+              забавными утятами. В результате мозг пытается переключиться с
+              одной задачи на другую — и просто не может. А чтобы вернуться к
+              состоянию полной концентрации, человеку в среднем нужно 20 минут.
+              Вот и получается, что чем больше времени мы проводим в гаджетах,
+              тем больше времени затем нужно, чтобы вернуться к работе.
+            </p>
+          </div>
+        </div>
       </section>
       <section class="section section__grid">
         <h2 class="section__title section__grid-left">
