--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
     <title>Сложно сосредоточиться</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
-    <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
@@ -62,11 +63,11 @@
     </header>
     <main>
       <section class="section section__grid">
-        <h2 class="section__title section__grid-left">
+        <h2 class="section__title section__how-to">
           Почему сосредоточиться так сложно
         </h2>
-        <h3 class="section__subtitle section__grid-right">Многозадачность</h3>
-        <p class="section__text section__grid-right">
+        <h3 class="section__subtitle section__advices">Многозадачность</h3>
+        <p class="section__text section__advices">
           Особенно сложно сосредоточиться, когда задач много и все они — важные.
           Где же легендарная многозадачность, когда она так нужна вам (и всем
           нанимающим менеджерам этого мира)? А дело в том, что её просто не
@@ -78,11 +79,11 @@
           этого мы работаем невнимательно: ошибаемся и быстро устаём.
         </p>
         <h3
-          class="section__subtitle section__subtitle_shift-top section__grid-right"
+          class="section__subtitle section__subtitle_shift-top section__advices"
         >
           Дофамин
         </h3>
-        <p class="section__text section__grid-right">
+        <p class="section__text section__advices">
           С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
           невозможности сосредоточиться замешана и полная противоположность
           стрессу — дофамин. Это вещество участвует в системе вознаграждения
@@ -135,19 +136,19 @@
         </div>
       </section>
       <section class="section section__grid">
-        <h2 class="section__title section__grid-left">
+        <h2 class="section__title section__how-to">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <h3 class="section__subtitle section__grid-right">
+        <h3 class="section__subtitle section__advices">
           5 простых (на самом деле не очень) советов
         </h3>
         <h4
-          class="section__title-advice section__subtitle-advice-shift section__grid-right"
+          class="section__title-advice section__subtitle-advice-shift section__advices"
         >
           Представьте небо и облака
         </h4>
-        <p class="section__text section__grid-right">
+        <p class="section__text section__advices">
           Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
           успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
           раз и мешают эти сложные задачи делать. В такие моменты можно закрыть
@@ -158,46 +159,46 @@
           будущего.
         </p>
         <h4
-          class="section__title-advice section__subtitle_shift-top section__grid-right"
+          class="section__title-advice section__subtitle_shift-top section__advices"
         >
           Включите музыку
         </h4>
-        <p class="section__text section__grid-right">
+        <p class="section__text section__advices">
           Но не любую, и не любимую. Любимая может быть связана с сильными
           положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт
           тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать
           включить плейлист с «белым шумом» или нейромузыкой.
         </p>
         <h4
-          class="section__title-advice section__subtitle_shift-top section__grid-right"
+          class="section__title-advice section__subtitle_shift-top section__advices"
         >
           Прогуляйтесь
         </h4>
-        <p class="section__text section__grid-right">
+        <p class="section__text section__advices">
           Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-          показал, что созерцание природы повышает концентрацию, в то время как
+          <a class="link" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328">показал</a>, что созерцание природы повышает концентрацию, в то время как
           после просмотра городских пейзажей она наоборот понижается. Можно
           совместить прогулку с физическими упражнениями или бегом — так в мозг
           поступит ещё больше кислорода и он будет лучше работать. Но и простая
           двадцатиминутная прогулка — тоже отличный вариант.
         </p>
         <h4
-          class="section__title-advice section__subtitle_shift-top section__grid-right"
+          class="section__title-advice section__subtitle_shift-top section__advices"
         >
           Хорошо ешьте
         </h4>
-        <p class="section__text section__grid-right">
+        <p class="section__text section__advices">
           Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые
           препятствуют резким скачкам сахара в крови. Например, с высоким
           содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль),
           коричневый рис, хлеб из цельнозерновой пшеницы.
         </p>
         <h4
-          class="section__title-advice section__subtitle_shift-top section__grid-right"
+          class="section__title-advice section__subtitle_shift-top section__advices"
         >
           Читайте
         </h4>
-        <p class="section__text section__grid-right">
+        <p class="section__text section__advices">
           Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
           прочитать пост в соцсети, достаточно нескольких минут или даже секунд.
           А вот интересная книга способна затянуть и на несколько часов и круто
@@ -258,7 +259,7 @@
       </section>
     </main>
     <footer class="footer decorated-zone">
-      <span class="footer_title">focus</span>
+      <p class="footer_title">focus</p>
     </footer>
   </body>
 </html>
