Закончены правки базового разрешения

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           этого мы работаем невнимательно: ошибаемся и быстро устаём.
         </p>
         <h3
-          class="section__subtitle section__subtitle_shift-top section__advices"
+          class="section__subtitle  section__advices"
         >
           Дофамин
         </h3>
@@ -109,7 +109,7 @@
             </p>
           </div>
           <div class="section__pair">
-            <h3 class="section__subtitle section__subtitle_shift-top">Еда</h3>
+            <h3 class="section__subtitle">Еда</h3>
             <p class="section__text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
               доставляют в мозг энергию и помогают ему лучше работать. Но уходит
@@ -120,7 +120,7 @@
             </p>
           </div>
           <div class="section__pair">
-            <h3 class="section__subtitle section__subtitle_shift-top">
+            <h3 class="section__subtitle">
               Гаджеты
             </h3>
             <p class="section__text">
@@ -159,7 +159,7 @@
           будущего.
         </p>
         <h4
-          class="section__title-advice section__subtitle_shift-top section__advices"
+          class="section__title-advice  section__advices"
         >
           Включите музыку
         </h4>
@@ -170,7 +170,7 @@
           включить плейлист с «белым шумом» или нейромузыкой.
         </p>
         <h4
-          class="section__title-advice section__subtitle_shift-top section__advices"
+          class="section__title-advice section__advices"
         >
           Прогуляйтесь
         </h4>
@@ -183,7 +183,7 @@
           двадцатиминутная прогулка — тоже отличный вариант.
         </p>
         <h4
-          class="section__title-advice section__subtitle_shift-top section__advices"
+          class="section__title-advice section__advices"
         >
           Хорошо ешьте
         </h4>
@@ -194,7 +194,7 @@
           коричневый рис, хлеб из цельнозерновой пшеницы.
         </p>
         <h4
-          class="section__title-advice section__subtitle_shift-top section__advices"
+          class="section__title-advice section__advices"
         >
           Читайте
         </h4>
