Внесение правок в коде

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           5 простых (на самом деле не очень) советов
         </h3>
         <h4
-          class="section__title-advice section__subtitle-advice-shift section__advices"
+          class="section__subtitle_weight-regular section__subtitle section__subtitle-advice-shift section__advices"
         >
           Представьте небо и облака
         </h4>
@@ -159,7 +159,7 @@
           будущего.
         </p>
         <h4
-          class="section__title-advice  section__advices"
+          class="section__subtitle_weight-regular section__subtitle  section__advices"
         >
           Включите музыку
         </h4>
@@ -170,7 +170,7 @@
           включить плейлист с «белым шумом» или нейромузыкой.
         </p>
         <h4
-          class="section__title-advice section__advices"
+          class="section__subtitle_weight-regular section__subtitle section__advices"
         >
           Прогуляйтесь
         </h4>
@@ -183,7 +183,7 @@
           двадцатиминутная прогулка — тоже отличный вариант.
         </p>
         <h4
-          class="section__title-advice section__advices"
+          class="section__subtitle_weight-regular section__subtitle section__advices"
         >
           Хорошо ешьте
         </h4>
@@ -194,7 +194,7 @@
           коричневый рис, хлеб из цельнозерновой пшеницы.
         </p>
         <h4
-          class="section__title-advice section__advices"
+          class="section__subtitle_weight-regular section__advices section__subtitle"
         >
           Читайте
         </h4>
