Внесение правок, проект готов к сдаче

--- a/index.html
+++ b/index.html
@@ -216,51 +216,36 @@
           А можно в картинках?
         </h3>
         <div class="gallery__positioning">
-          <picture class="gallery__item-1">
-            <source src="../images/sunset.png" type="image/png" />
-            <img
-              class="gallery__image"
-              src="./images/sunset.png"
-              loading="lazy"
-              alt="Закат солнца на фоне гор и воды"
-            />
-          </picture>
-          <picture class="gallery__item-2">
-            <source src="../images/ice-cream.png" type="image/png" />
-            <img
-              class="gallery__image"
-              src="./images/ice-cream.png"
-              loading="lazy"
-              alt="Мороженое ввиде придуманных персонажей"
-            />
-          </picture>
-          <picture class="gallery__item-3">
-            <source src="../images/tape.png" type="image/png" />
-            <img
-              class="gallery__image"
-              src="./images/tape.png"
-              loading="lazy"
-              alt="Кассета как отголосок прошлого"
-            />
-          </picture>
-          <picture class="gallery__item-4">
-            <source src="../images/books.png" type="image/png" />
-            <img
-              class="gallery__image"
-              src="./images/books.png"
-              loading="lazy"
-              alt="Стопка обучающих книг"
-            />
-          </picture>
-          <picture class="gallery__item-5">
-            <source src="../images/street.png" type="image/png" />
-            <img
-              class="gallery__image"
-              src="./images/street.png"
-              loading="lazy"
-              alt="Улица в малоэтажном районе"
-            />
-          </picture>
+          <img
+            class="gallery__image gallery__item-1"
+            src="./images/sunset.png"
+            loading="lazy"
+            alt="Закат солнца на фоне гор и воды"
+          />
+          <img
+            class="gallery__image gallery__item-2"
+            src="./images/ice-cream.png"
+            loading="lazy"
+            alt="Мороженое ввиде придуманных персонажей"
+          />
+          <img
+            class="gallery__image gallery__item-3"
+            src="./images/tape.png"
+            loading="lazy"
+            alt="Кассета как отголосок прошлого"
+          />
+          <img
+            class="gallery__image gallery__item-4"
+            src="./images/books.png"
+            loading="lazy"
+            alt="Стопка обучающих книг"
+          />
+          <img
+            class="gallery__image gallery__item-5"
+            src="./images/street.png"
+            loading="lazy"
+            alt="Улица в малоэтажном районе"
+          />
         </div>
       </section>
     </main>
