--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h2 class="section__title section__how-to">
           Почему сосредоточиться так сложно
         </h2>
-        <article>
+        <div>
           <h3 class="section__subtitle section__advices">Многозадачность</h3>
           <p class="section__text section__advices">
             Особенно сложно сосредоточиться, когда задач много и все они —
@@ -92,7 +92,7 @@
             удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
             тем больше удовольствия получаешь.
           </p>
-        </article>
+        </div>
       </section>
       <section class="section section-causes">
         <h2 class="section__title section__title-width">
